@@ -4,6 +4,7 @@ New in master
 Features
 --------
 
+* Added ``enclosure_length`` meta field for better interop (Issue #2338)
 * New Lithuanian translation by Antanas Lasys
 
 Bugfixes
